<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/colorBlue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_msg_billamount"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBillAmount"
        android:inputType="numberDecimal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/main_hint_billamount"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHint="@color/colorLightGrey"
        android:gravity="center"
        android:background="@android:color/transparent"/>

    <View
        android:id="@+id/vRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>

    <LinearLayout
        android:id="@+id/rlRatingButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">
        
        <ImageButton
            android:id="@+id/ibRegularService"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_button"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBlue"
            android:src="@drawable/ic_insert_emoticon_black_24dp"/>

        <ImageButton
            android:id="@+id/ibGoodService"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_button"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBlue"
            android:src="@drawable/ic_insert_emoticon_black_24dp"/>

        <ImageButton
            android:id="@+id/ibExcellentService"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_image_button"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBlue"
            android:src="@drawable/ic_insert_emoticon_black_24dp"/>

    </LinearLayout>

    <View
        android:id="@+id/vRatingSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rlRatingButtons"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>

    <TextView
        android:id="@+id/tvServiceRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/main_msg_servicerating"
        android:layout_below="@+id/vRatingSeparator"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textAllCaps="true"/>

    <LinearLayout
        android:id="@+id/llTipInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvServiceRating"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tvTipPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_msg_tippercent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/tvTipAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/main_msg_tiptotal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

    </LinearLayout>

    <View
        android:id="@+id/vBillSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llTipInformation"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGrey"/>

    <TextView
        android:id="@+id/tvBillTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vBillSeparator"
        android:layout_marginTop="@dimen/activity_vertical_margin_big"
        android:gravity="center"
        android:text="@string/main_msg_billtotal"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:id="@+id/tvBillTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBillTotal"
        android:layout_marginTop="@dimen/activity_vertical_margin_big"
        android:gravity="center"
        android:text="@string/main_msg_billtotalresult"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>